[gd_scene load_steps=15 format=3 uid="uid://bcattukxdc6v"]

[ext_resource type="Script" path="res://Scripts/door_level_2.gd" id="1_vuy4r"]
[ext_resource type="Texture2D" uid="uid://csp7p3ptps0yp" path="res://Assets/GameSprites/Characters/!$Gate1.png" id="2_1wpee"]
[ext_resource type="AudioStream" uid="uid://b3rbggrx2l8k6" path="res://Assets/Audio/DoorUnlock.mp3" id="3_0sjp1"]
[ext_resource type="Texture2D" uid="uid://cbcjenl8pbxrb" path="res://Assets/Mr. Breakfast's Free Prompts/png/e_light.png" id="4_kx2er"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jup2"]
size = Vector2(66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq1qw"]
atlas = ExtResource("2_1wpee")
region = Rect2(0, 64, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_50t1i"]
atlas = ExtResource("2_1wpee")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_443qo"]
atlas = ExtResource("2_1wpee")
region = Rect2(0, 128, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq1pr"]
atlas = ExtResource("2_1wpee")
region = Rect2(0, 192, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_amdu7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq1qw")
}],
"loop": false,
"name": &"Closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50t1i")
}],
"loop": false,
"name": &"Locked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_443qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq1pr")
}],
"loop": false,
"name": &"Opened",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e5n0b"]
size = Vector2(123, 67)

[sub_resource type="Animation" id="Animation_r4ti3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ELight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tqe5p"]
resource_name = "vanish"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ELight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grsfg"]
_data = {
"RESET": SubResource("Animation_r4ti3"),
"vanish": SubResource("Animation_tqe5p")
}

[node name="Door" type="Area2D"]
script = ExtResource("1_vuy4r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
shape = SubResource("RectangleShape2D_2jup2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_amdu7")
animation = &"Locked"
autoplay = "Locked"

[node name="nearDoor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="nearDoor"]
position = Vector2(-2.5, -0.5)
shape = SubResource("RectangleShape2D_e5n0b")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0sjp1")
volume_db = 8.432

[node name="ELight" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -54.4134)
scale = Vector2(0.715966, 0.663579)
texture = ExtResource("4_kx2er")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_grsfg")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="nearDoor" to="." method="_on_near_door_body_entered"]
